--- a/portfolio.html
+++ b/portfolio.html
@@ -54,11 +54,17 @@
     </div>
     <div id="project1">
       <a href="https://catherinechika.github.io/Good-Morning-app/" target="_blank">
-        <h3>Triva Game</h3>
+        <h3>Good Morning App</h3>
         <img src="assets/images/Good_Morning_App.JPG" alt="Project 1">
       </a>
-    </div>
       
+    </div>
+    <div id="project2">
+      <a href="https://obscure-dawn-10331.herokuapp.com/" target="_blank">
+        <h3>Flutter App</h3>
+        <img src="assets/images/Flutter.JPG" alt="Project 2">
+      </a>
+    </div>
     </section>
 
   </div>
