--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
       </div>
       <div id="trivia">
         <a href="https://smit239.github.io/TriviaGame/" target="_blank">
-          <h3>Triva Game</h3>
+          <h3>Trivia Game</h3>
           <img src="assets/images/2020_Vette.JPG" alt="Trivia Game">
         </a>
       </div>
@@ -57,7 +57,6 @@
         <h3>Good Morning App</h3>
         <img src="assets/images/Good_Morning_App.JPG" alt="Project 1">
       </a>
-      
     </div>
     <div id="project2">
       <a href="https://obscure-dawn-10331.herokuapp.com/" target="_blank">
@@ -65,6 +64,19 @@
         <img src="assets/images/Flutter.JPG" alt="Project 2">
       </a>
     </div>
+    <div id="bamazon">
+      <a href="https://secure-temple-72654.herokuapp.com/" target="_blank">
+        <h3>Bamazon</h3>
+        <img src="assets/images/bamazonlogo.png" alt="Project 1">
+      </a>
+    </div>
+    <div id="friendfinder">
+      <a href="https://calm-earth-57338.herokuapp.com/" target="_blank">
+        <h3>Friend Finder</h3>
+        <img src="assets/images/Friend-Finder.JPG" alt="Project 1">
+      </a>
+    </div>
+    
     </section>
 
   </div>
